# jsartoolkitNFT

./: .gitignore  .gitmodules  .npmignore  .npmrc  .nvmrc  .prettierc.json  .prettierignore  CONTRIBUTING.md  Gruntfile.js  README.md  karma-debug.conf.js  karma-embed-es6.conf.js  karma-es6.conf.js  karma.conf.js  package-lock.json  package.json  python-server.py  tsconfig.json  webpack-glsl-minifier.js  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
emscripten/: ARBindEM.cpp  ARToolKitJS.cpp  ARToolKitJS_td.cpp  ARToolKitNFT_js.cpp  ARToolKitNFT_js.h  ARToolKitNFT_js_bindings.cpp  ARToolKitNFT_js_td.cpp  ARToolKitNFT_js_td.h  markerDecompress.c  markerDecompress.h  trackingMod.c  trackingMod.h  trackingMod2d.c  trackingSub.c
examples/: ARToolkitNFT_ES6_customInit_example.html  ARToolkitNFT_ES6_example.html  ARToolkitNFT_ES6_gltf_example.html  ARToolkitNFT_ES6_gray_example.html  ARToolkitNFT_ES6_nft_fusion_example.html  ARToolkitNFT_ES6_threading_example.html  ARToolkitNFT_ES6_threading_zft_example.html  ARToolkitNFT_ES6_zft_example.html  ARtoolkitNFT_multi_ES6_example.html  arNFT_ES6_example.html  arNFT_example.html  arNFT_reg_example.html  basic.html  basic_embed_ES6.html  basic_embed_ES6_zft.html  basic_zft.html  (+25 more)
python-bindings/: ARToolKitNFT_py.cpp  ARToolKitNFT_py.h  README.md  artoolkitNFT.py  example.py  pyproject.toml  setup.py  test.py  test_arcontrollerNFT.py  unittests.py
python-bindings/src/ARToolKitNFT/: arcontrollerNFT.py  artoolkitNFT.py
python-bindings/src/artoolkitnft/: arcontrollerNFT.py
(+144 files in other folders)
